--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,11 +14,13 @@ body {
   justify-content: center;
   font-weight: lighter;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 5em; }
+  font-size: 15em;
+  padding-top: 15%; }
 
 #contentDiv {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 70%; }
 
 #startButtonDiv {
   display: flex;
@@ -31,20 +33,32 @@ body {
   height: 200px;
   width: 100%;
   border: 1px solid #333333;
-  border-radius: 30%;
+  border-radius: 15px;
   font-weight: lighter;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: lighter;
-  font-size: 30px;
+  font-size: 65px;
   background-color: #EEFCFF;
   text-align: center;
+  align-items: center;
   transition: width 0.5s, height 0.5s; }
 
 #startButton:hover {
   height: 201px;
   padding-left: 35%;
+  padding-right: 35%;
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
 #startButton:active {
   transform: translateY(4px);
   box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.24), 0 13px 45px 0 rgba(0, 0, 0, 0.19); }
+
+#timer_div {
+  display: flex;
+  flex-direction: column;
+  font-size: 170px;
+  font-weight: lighter;
+  align-items: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  border: 2px dashed gray; }
