--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -28,12 +28,15 @@ body {
   justify-content: center;
   font-weight: lighter;
   font-family: $main_font;
-  font-size: 5em;
+  font-size: 15em;
+  padding-top: 15%;
+
 }
 
 #contentDiv{
   display: flex;
   justify-content: center;
+  margin-top: 70%;
 }
 
 #startButtonDiv{
@@ -48,19 +51,21 @@ body {
   height:200px;
   width: 100%;
   border: 1px solid $dark-color;
-  border-radius: 30%;
+  border-radius: 15px;
   font-weight: lighter;
   font-family: $main_font;
   font-weight: lighter;
-  font-size: 30px;
+  font-size: 65px;
   background-color: $color2;
   text-align: center;
+  align-items: center;
   transition: width 0.5s, height 0.5s;
 }
 
 #startButton:hover {
   height:201px;
   padding-left: 35%;
+  padding-right: 35%;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -68,4 +73,15 @@ body {
   transform: translateY(4px);
   box-shadow: 0 10px 12px 0 rgba(0,0,0,0.24), 0 13px 45px 0 rgba(0,0,0,0.19);
 
+}
+
+#timer_div{
+  display: flex;
+  flex-direction: column;
+  font-size: 170px;
+  font-weight: lighter;
+  align-items: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  border: 2px dashed gray;
 }
